# pyniexp

./: .gitignore  LICENSE  README.md  config.json  config_stimulation.json  dicomexport.py  example.py  example_TCPreceiver.py  example_TCPsender.py  example_UDPreceiver.py  example_UDPsender.py  example_scannersynch.py  example_scannersynch_deprecated.py  kbutils.py  pyproject.toml  requirements.txt  scannersynch.py  setup.py  utils.py
examples/: config_TES.json  config_TES_sim.json  config_TI.json  example_TCPreceiver.py  example_TCPsender.py  example_TI.py  example_UDPreceiver.py  example_UDPsender.py  example_mlplugins.py  example_scannersynch.py  example_scannersynch_deprecated.py  example_stimulation.py  example_stimulatordlg.py
pyniexp/: connection.py  dicomexport.py  kbutils.py  mlplugins.py  scannersynch.py  scannersynch_mp.py  stimulation.py  stimulatordlg.py  stimulatordlg.ui  triggers.py  udp.py  utils.py
scannersynch/: kbutils.py  scannersynch.py
src/pyniexp/: __init__.py  _version.py  connection.py  kbutils.py  scannersynch.py  stimulatordlg.py  triggers.py
src/pyniexp/kbutils/: __init__.py  kbutils.py
src/pyniexp/mlplugins/: __init__.py  mlplugins.py
src/pyniexp/network/: __init__.py  connection.py
src/pyniexp/scanner/: __init__.py  scannersynch.py  triggers.py
src/pyniexp/stimulator/: __init__.py  stimulation.py  stimulatordlg.py  stimulatordlg.ui
src/pyniexp/utils/: __init__.py  utils.py
